5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1712_2503.log
== TEST (2019-05-13 19:43:25) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
while cont < x:
	p = p + (4*m)/u
	cont = cont + 1
	u = u + 2
	m = m*(-1)
print(round(p, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p = p + (4*m)/u
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:43:33) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
while cont < x:
	p = p + (4*m)/u
	cont = cont + 1
	u = u + 2
	m = m*(-1)
print(round(p, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p = p + (4*m)/u
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:44:08) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
m = -1
while cont < x:
	p = p + (4*m)/u
	cont = cont + 1
	u = u + 2
	m = m*(-1)
print(round(p, 8))
-- OUTPUT:
0.85100004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:44:32) 
-- CODE:
x = int(input(""))
p = 0
cont = 1
u = 1
m = 1
while cont < x:
	p = p + (4*m)/u
	cont = cont + 1
	u = u + 2
	m = m*(-1)
print(round(p, 8))
-- OUTPUT:
3.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:45:12) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
m = 1
while cont < x:
	u = u + 2
	m = m*(-1)
	p = p + (4*m)/u
	cont = cont + 1
print(round(p, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:45:20) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
m = 1
while cont < x:
	u = u + 2
	m = m*(-1)
	p = p + (4*m)/u
	cont = cont + 1
print(round(p, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:45:24) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
m = 1
while cont < x:
	u = u + 2
	m = m*(-1)
	p = p + (4*m)/u
	cont = cont + 1
print(round(p, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:45:30) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
m = 1
while cont < x:
	u = u + 2
	m = m*(-1)
	p = p + (4*m)/u
	cont = cont + 1
print(round(p, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:45:42) 
-- CODE:
x = int(input(""))
p = 4
cont = 1
u = 1
m = 1
while cont < x:
	u = u + 2
	m = m*(-1)
	p = p + (4*m)/u
	cont = cont + 1
print(round(p, 8))
-- EXECUTION TIME:
0.169579
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
